--- a/ch1/hint/templates/hint/theme_hint.html
+++ b/ch1/hint/templates/hint/theme_hint.html
@@ -5,211 +5,212 @@
         width:100%
     }
 </style>
-<div class="container">
-{% if hint == "1" %}
-    {% if theme.hint1 %}
-        {% if theme.sub_hint1 %}
-            <audio controls autoplay src="{{ theme.hint1.url }}"></audio>
-            <audio controls autoplay src="{{ theme.sub_hint1.url }}"></audio>
-        {% else %}
-            <audio controls autoplay src="{{ theme.hint1.url }}"></audio>
+<div class="container" style="position: absolute;top:42%">
+    {% if hint == "1" %}
+        {% if theme.hint1 %}
+            {% if theme.sub_hint1 %}
+                <audio controls autoplay src="{{ theme.hint1.url }}"></audio>
+                <audio controls autoplay src="{{ theme.sub_hint1.url }}"></audio>
+            {% else %}
+                <audio controls autoplay src="{{ theme.hint1.url }}"></audio>
+            {% endif %}
         {% endif %}
     {% endif %}
-{% endif %}
-{% if hint == "2" %}
-    {% if theme.hint2 %}
-        {% if theme.sub_hint2 %}
-            <audio controls autoplay src="{{ theme.hint2.url }}"></audio>
-            <audio controls autoplay src="{{ theme.sub_hint2.url }}"></audio>
-        {% else %}
-            <audio controls autoplay src="{{ theme.hint2.url }}"></audio>
+    {% if hint == "2" %}
+        {% if theme.hint2 %}
+            {% if theme.sub_hint2 %}
+                <audio controls autoplay src="{{ theme.hint2.url }}"></audio>
+                <audio controls autoplay src="{{ theme.sub_hint2.url }}"></audio>
+            {% else %}
+                <audio controls autoplay src="{{ theme.hint2.url }}"></audio>
+            {% endif %}
         {% endif %}
     {% endif %}
-{% endif %}
-{% if hint == "3" %}
-    {% if theme.hint3 %}
-        {% if theme.sub_hint3 %}
-            <audio controls autoplay src="{{ theme.hint3.url }}"></audio>
-            <audio controls autoplay src="{{ theme.sub_hint3.url }}"></audio>
-        {% else %}
-            <audio controls autoplay src="{{ theme.hint3.url }}"></audio>
+    {% if hint == "3" %}
+        {% if theme.hint3 %}
+            {% if theme.sub_hint3 %}
+                <audio controls autoplay src="{{ theme.hint3.url }}"></audio>
+                <audio controls autoplay src="{{ theme.sub_hint3.url }}"></audio>
+            {% else %}
+                <audio controls autoplay src="{{ theme.hint3.url }}"></audio>
+            {% endif %}
         {% endif %}
     {% endif %}
-{% endif %}
-{% if hint == "4" %}
-    {% if theme.hint4 %}
-        {% if theme.sub_hint4 %}
-            <audio controls autoplay src="{{ theme.hint4.url }}"></audio>
-            <audio controls autoplay src="{{ theme.sub_hint4.url }}"></audio>
-        {% else %}
-            <audio controls autoplay src="{{ theme.hint4.url }}"></audio>
+    {% if hint == "4" %}
+        {% if theme.hint4 %}
+            {% if theme.sub_hint4 %}
+                <audio controls autoplay src="{{ theme.hint4.url }}"></audio>
+                <audio controls autoplay src="{{ theme.sub_hint4.url }}"></audio>
+            {% else %}
+                <audio controls autoplay src="{{ theme.hint4.url }}"></audio>
+            {% endif %}
         {% endif %}
     {% endif %}
-{% endif %}
-{% if hint == "5" %}
-    {% if theme.hint5 %}
-        {% if theme.sub_hint5 %}
-            <audio controls autoplay src="{{ theme.hint5.url }}"></audio>
-            <audio controls autoplay src="{{ theme.sub_hint5.url }}"></audio>
-        {% else %}
-            <audio controls autoplay src="{{ theme.hint5.url }}"></audio>
+    {% if hint == "5" %}
+        {% if theme.hint5 %}
+            {% if theme.sub_hint5 %}
+                <audio controls autoplay src="{{ theme.hint5.url }}"></audio>
+                <audio controls autoplay src="{{ theme.sub_hint5.url }}"></audio>
+            {% else %}
+                <audio controls autoplay src="{{ theme.hint5.url }}"></audio>
+            {% endif %}
         {% endif %}
     {% endif %}
-{% endif %}
-{% if hint == "6" %}
-    {% if theme.hint6 %}
-        {% if theme.sub_hint6 %}
-            <audio controls autoplay src="{{ theme.hint6.url }}"></audio>
-            <audio controls autoplay src="{{ theme.sub_hint6.url }}"></audio>
-        {% else %}
-            <audio controls autoplay src="{{ theme.hint6.url }}"></audio>
+    {% if hint == "6" %}
+        {% if theme.hint6 %}
+            {% if theme.sub_hint6 %}
+                <audio controls autoplay src="{{ theme.hint6.url }}"></audio>
+                <audio controls autoplay src="{{ theme.sub_hint6.url }}"></audio>
+            {% else %}
+                <audio controls autoplay src="{{ theme.hint6.url }}"></audio>
+            {% endif %}
         {% endif %}
     {% endif %}
-{% endif %}
-{% if hint == "7" %}
-    {% if theme.hint7 %}
-        {% if theme.sub_hint7 %}
-            <audio controls autoplay src="{{ theme.hint7.url }}"></audio>
-            <audio controls autoplay src="{{ theme.sub_hint7.url }}"></audio>
-        {% else %}
-            <audio controls autoplay src="{{ theme.hint7.url }}"></audio>
+    {% if hint == "7" %}
+        {% if theme.hint7 %}
+            {% if theme.sub_hint7 %}
+                <audio controls autoplay src="{{ theme.hint7.url }}"></audio>
+                <audio controls autoplay src="{{ theme.sub_hint7.url }}"></audio>
+            {% else %}
+                <audio controls autoplay src="{{ theme.hint7.url }}"></audio>
+            {% endif %}
         {% endif %}
     {% endif %}
-{% endif %}
-{% if hint == "8" %}
-    {% if theme.hint8 %}
-        {% if theme.sub_hint8 %}
-            <audio controls autoplay src="{{ theme.hint8.url }}"></audio>
-            <audio controls autoplay src="{{ theme.sub_hint8.url }}"></audio>
-        {% else %}
-            <audio controls autoplay src="{{ theme.hint8.url }}"></audio>
+    {% if hint == "8" %}
+        {% if theme.hint8 %}
+            {% if theme.sub_hint8 %}
+                <audio controls autoplay src="{{ theme.hint8.url }}"></audio>
+                <audio controls autoplay src="{{ theme.sub_hint8.url }}"></audio>
+            {% else %}
+                <audio controls autoplay src="{{ theme.hint8.url }}"></audio>
+            {% endif %}
         {% endif %}
     {% endif %}
-{% endif %}
-{% if hint == "9" %}
-    {% if theme.hint9 %}
-        {% if theme.sub_hint9 %}
-            <audio controls autoplay src="{{ theme.hint9.url }}"></audio>
-            <audio controls autoplay src="{{ theme.sub_hint9.url }}"></audio>
-        {% else %}
-            <audio controls autoplay src="{{ theme.hint9.url }}"></audio>
+    {% if hint == "9" %}
+        {% if theme.hint9 %}
+            {% if theme.sub_hint9 %}
+                <audio controls autoplay src="{{ theme.hint9.url }}"></audio>
+                <audio controls autoplay src="{{ theme.sub_hint9.url }}"></audio>
+            {% else %}
+                <audio controls autoplay src="{{ theme.hint9.url }}"></audio>
+            {% endif %}
         {% endif %}
     {% endif %}
-{% endif %}
-{% if hint == "10" %}
-    {% if theme.hint10 %}
-        {% if theme.sub_hint10 %}
-            <audio controls autoplay src="{{ theme.hint10.url }}"></audio>
-            <audio controls autoplay src="{{ theme.sub_hint10.url }}"></audio>
-        {% else %}
-            <audio controls autoplay src="{{ theme.hint10.url }}"></audio>
+    {% if hint == "10" %}
+        {% if theme.hint10 %}
+            {% if theme.sub_hint10 %}
+                <audio controls autoplay src="{{ theme.hint10.url }}"></audio>
+                <audio controls autoplay src="{{ theme.sub_hint10.url }}"></audio>
+            {% else %}
+                <audio controls autoplay src="{{ theme.hint10.url }}"></audio>
+            {% endif %}
         {% endif %}
     {% endif %}
-{% endif %}
-{% if hint == "11" %}
-    {% if theme.hint11 %}
-        {% if theme.sub_hint11 %}
-            <audio controls autoplay src="{{ theme.hint11.url }}"></audio>
-            <audio controls autoplay src="{{ theme.sub_hint11.url }}"></audio>
-        {% else %}
-            <audio controls autoplay src="{{ theme.hint11.url }}"></audio>
+    {% if hint == "11" %}
+        {% if theme.hint11 %}
+            {% if theme.sub_hint11 %}
+                <audio controls autoplay src="{{ theme.hint11.url }}"></audio>
+                <audio controls autoplay src="{{ theme.sub_hint11.url }}"></audio>
+            {% else %}
+                <audio controls autoplay src="{{ theme.hint11.url }}"></audio>
+            {% endif %}
         {% endif %}
     {% endif %}
-{% endif %}
-{% if hint == "12" %}
-    {% if theme.hint12 %}
-        {% if theme.sub_hint12 %}
-            <audio controls autoplay src="{{ theme.hint12.url }}"></audio>
-            <audio controls autoplay src="{{ theme.sub_hint12.url }}"></audio>
-        {% else %}
-            <audio controls autoplay src="{{ theme.hint12.url }}"></audio>
+    {% if hint == "12" %}
+        {% if theme.hint12 %}
+            {% if theme.sub_hint12 %}
+                <audio controls autoplay src="{{ theme.hint12.url }}"></audio>
+                <audio controls autoplay src="{{ theme.sub_hint12.url }}"></audio>
+            {% else %}
+                <audio controls autoplay src="{{ theme.hint12.url }}"></audio>
+            {% endif %}
         {% endif %}
     {% endif %}
-{% endif %}
-{% if hint == "13" %}
-    {% if theme.hint13 %}
-        {% if theme.sub_hint13 %}
-            <audio controls autoplay src="{{ theme.hint13.url }}"></audio>
-            <audio controls autoplay src="{{ theme.sub_hint13.url }}"></audio>
-        {% else %}
-            <audio controls autoplay src="{{ theme.hint13.url }}"></audio>
+    {% if hint == "13" %}
+        {% if theme.hint13 %}
+            {% if theme.sub_hint13 %}
+                <audio controls autoplay src="{{ theme.hint13.url }}"></audio>
+                <audio controls autoplay src="{{ theme.sub_hint13.url }}"></audio>
+            {% else %}
+                <audio controls autoplay src="{{ theme.hint13.url }}"></audio>
+            {% endif %}
         {% endif %}
     {% endif %}
-{% endif %}
-{% if hint == "14" %}
-    {% if theme.hint14 %}
-        {% if theme.sub_hint14 %}
-            <audio controls autoplay src="{{ theme.hint14.url }}"></audio>
-            <audio controls autoplay src="{{ theme.sub_hint14.url }}"></audio>
-        {% else %}
-            <audio controls autoplay src="{{ theme.hint14.url }}"></audio>
+    {% if hint == "14" %}
+        {% if theme.hint14 %}
+            {% if theme.sub_hint14 %}
+                <audio controls autoplay src="{{ theme.hint14.url }}"></audio>
+                <audio controls autoplay src="{{ theme.sub_hint14.url }}"></audio>
+            {% else %}
+                <audio controls autoplay src="{{ theme.hint14.url }}"></audio>
+            {% endif %}
         {% endif %}
     {% endif %}
-{% endif %}
-{% if hint == "15" %}
-    {% if theme.hint15 %}
-        {% if theme.sub_hint15 %}
-            <audio controls autoplay src="{{ theme.hint15.url }}"></audio>
-            <audio controls autoplay src="{{ theme.sub_hint15.url }}"></audio>
-        {% else %}
-            <audio controls autoplay src="{{ theme.hint15.url }}"></audio>
+    {% if hint == "15" %}
+        {% if theme.hint15 %}
+            {% if theme.sub_hint15 %}
+                <audio controls autoplay src="{{ theme.hint15.url }}"></audio>
+                <audio controls autoplay src="{{ theme.sub_hint15.url }}"></audio>
+            {% else %}
+                <audio controls autoplay src="{{ theme.hint15.url }}"></audio>
+            {% endif %}
         {% endif %}
     {% endif %}
-{% endif %}
-{% if hint == "16" %}
-    {% if theme.hint16 %}
-        {% if theme.sub_hint16 %}
-            <audio controls autoplay src="{{ theme.hint16.url }}"></audio>
-            <audio controls autoplay src="{{ theme.sub_hint16.url }}"></audio>
-        {% else %}
-            <audio controls autoplay src="{{ theme.hint16.url }}"></audio>
+    {% if hint == "16" %}
+        {% if theme.hint16 %}
+            {% if theme.sub_hint16 %}
+                <audio controls autoplay src="{{ theme.hint16.url }}"></audio>
+                <audio controls autoplay src="{{ theme.sub_hint16.url }}"></audio>
+            {% else %}
+                <audio controls autoplay src="{{ theme.hint16.url }}"></audio>
+            {% endif %}
         {% endif %}
     {% endif %}
-{% endif %}
-{% if hint == "17" %}
-    {% if theme.hint17 %}
-        {% if theme.sub_hint17 %}
-            <audio controls autoplay src="{{ theme.hint17.url }}"></audio>
-            <audio controls autoplay src="{{ theme.sub_hint17.url }}"></audio>
-        {% else %}
-            <audio controls autoplay src="{{ theme.hint17.url }}"></audio>
-        {% endif %}    {% endif %}
-{% endif %}
-{% if hint == "18" %}
-    {% if theme.hint18 %}
-        {% if theme.sub_hint18 %}
-            <audio controls autoplay src="{{ theme.hint18.url }}"></audio>
-            <audio controls autoplay src="{{ theme.sub_hint18.url }}"></audio>
-        {% else %}
-            <audio controls autoplay src="{{ theme.hint18.url }}"></audio>
+    {% if hint == "17" %}
+        {% if theme.hint17 %}
+            {% if theme.sub_hint17 %}
+                <audio controls autoplay src="{{ theme.hint17.url }}"></audio>
+                <audio controls autoplay src="{{ theme.sub_hint17.url }}"></audio>
+            {% else %}
+                <audio controls autoplay src="{{ theme.hint17.url }}"></audio>
+            {% endif %}    {% endif %}
+    {% endif %}
+    {% if hint == "18" %}
+        {% if theme.hint18 %}
+            {% if theme.sub_hint18 %}
+                <audio controls autoplay src="{{ theme.hint18.url }}"></audio>
+                <audio controls autoplay src="{{ theme.sub_hint18.url }}"></audio>
+            {% else %}
+                <audio controls autoplay src="{{ theme.hint18.url }}"></audio>
+            {% endif %}
         {% endif %}
     {% endif %}
-{% endif %}
-{% if hint == "19" %}
-    {% if theme.hint19 %}
-        {% if theme.sub_hint19 %}
-            <audio controls autoplay src="{{ theme.hint19.url }}"></audio>
-            <audio controls autoplay src="{{ theme.sub_hint19.url }}"></audio>
-        {% else %}
-            <audio controls autoplay src="{{ theme.hint19.url }}"></audio>
+    {% if hint == "19" %}
+        {% if theme.hint19 %}
+            {% if theme.sub_hint19 %}
+                <audio controls autoplay src="{{ theme.hint19.url }}"></audio>
+                <audio controls autoplay src="{{ theme.sub_hint19.url }}"></audio>
+            {% else %}
+                <audio controls autoplay src="{{ theme.hint19.url }}"></audio>
+            {% endif %}
         {% endif %}
     {% endif %}
-{% endif %}
-{% if hint == "20" %}
-    {% if theme.hint20 %}
-        {% if theme.sub_hint20 %}
-            <audio controls autoplay src="{{ theme.hint20.url }}"></audio>
-            <audio controls autoplay src="{{ theme.sub_hint20.url }}"></audio>
-        {% else %}
-            <audio controls autoplay src="{{ theme.hint20.url }}"></audio>
+    {% if hint == "20" %}
+        {% if theme.hint20 %}
+            {% if theme.sub_hint20 %}
+                <audio controls autoplay src="{{ theme.hint20.url }}"></audio>
+                <audio controls autoplay src="{{ theme.sub_hint20.url }}"></audio>
+            {% else %}
+                <audio controls autoplay src="{{ theme.hint20.url }}"></audio>
+            {% endif %}
         {% endif %}
     {% endif %}
-{% endif %}
+    <div class="text-center">
+        <button type="button" style="border-color:white;color:white;width:60%" class="my-4 form-control btn btn-default" onclick="back();">다른 힌트 사용하러가기</button>
+    </div>
 </div>
 
-<div class="text-center">
-    <button type="button" style="border-color:white;color:white;width:50%" class="my-4 form-control btn btn-default" onclick="back();">다른 힌트 사용하러가기</button>
-</div>
+
 <script>
     function back(){
         var referrer =  document.referrer;
