--- a/ch1/hint/templates/hint/not_hint.html
+++ b/ch1/hint/templates/hint/not_hint.html
@@ -3,8 +3,8 @@
 {% load static %}
 
 <div class="container">
-  <img class="text-center p-3" width="80%" style="margin-left:30px" src="{% static 'not_hint2.png' %}">
-  <img class="text-center px-3" width="100%" src="{% static 'not_hint.png' %}">
+  <h3 class="mt-5 pt-5" style="color:white;">힌트를 모두다 사용하셨습니다</h3>
+  <img class="text-center px-3 mt-5 pt-3" width="100%" src="{% static 'not_hint.png' %}">
 </div>
 <button style="position:fixed;bottom:20px;left:20px;background-color:black;border-color:black" type="button" onclick="location.href='{% url 'hint:reset_code' user_id theme %}'">
     <img width="35px;" src="{% static  'reset1.png' %}">
