--- a/ch1/hint/templates/hint/not_hint.html
+++ b/ch1/hint/templates/hint/not_hint.html
@@ -2,7 +2,7 @@
 {% block content %}
 {% load static %}
 
-<h3 class="mt-5 pt-5 text-center" style="color:white;">힌트를 모두다 사용하셨습니다</h3>
+<h3 class="mt-5 pt-5 text-center" style="color:white;">힌트를 모두 사용하셨습니다</h3>
 <div class="container">
   <img class="text-center px-3 mt-5 pt-3" width="100%" src="{% static 'not_hint.png' %}">
 </div>
