--- a/ch1/hint/templates/hint/qr.html
+++ b/ch1/hint/templates/hint/qr.html
@@ -12,13 +12,13 @@
 <div class="container text-center my-4 p-3">
     <span>{{ escape_room }}</span>
     <h2 class="mb-4">{{ theme }}</h2>
-    <button type="button" class="m-0 p-0" style="background-color:black;border-color:black" onclick="android()"><img src="{% static 'qr.png' %}"></button>
+    <img src="{% static 'qr.png' %}">
     <div class="row mt-3">
         <div class="col-2"></div>
         <div class="col-8">
             <form action="" method="get">
                 {% csrf_token %}
-                <button id="hint_btn" style="border-color:white; color:white" class="mt-3 form-control btn btn-default" onclick="hintUse();" type="submit">힌트 사용</button>
+                <button id="hint_btn" style="border-color:white; color:white" class="mt-3 form-control btn btn-default" onclick="android()" type="submit">힌트 사용</button>
                 <h3 class="mt-4 mb-2">HINT COUNT</h3>
                 <h4 class="m-0">{{ count }}</h4>
                 <input style="color:black;visibility:hidden" id="input" name="q" value="{{ q }}" type="text">
@@ -74,6 +74,18 @@
     function url(url){
         document.getElementById("input").value=url;
     }
+
+    ("#input").change(function(){
+        var url = document.getElementById("input").value;
+        if (url == ""){
+            swal({title:"QR코드를 스캔하세요.",
+                button:false,
+            });
+        }else {
+            location.href=url;
+        }
+    });
+
 
     function hintUse(){
         url = document.getElementById("input").value;
