--- a/ch1/hint/templates/hint/qr.html
+++ b/ch1/hint/templates/hint/qr.html
@@ -18,10 +18,11 @@
         <div class="col-8">
             <form action="" method="get">
                 {% csrf_token %}
-                <button id="hint_btn" style="border-color:white; color:white" class="mt-3 form-control btn btn-default" onclick="android()" type="submit">힌트 사용</button>
+                <button style="border-color:white; color:white" class="mt-3 form-control btn btn-default" onclick="android()" type="button">힌트 사용</button>
                 <h3 class="mt-4 mb-2">HINT COUNT</h3>
                 <h4 class="m-0">{{ count }}</h4>
                 <input style="color:black;visibility:hidden" id="input" name="q" value="{{ q }}" type="text">
+                <button id="hint_btn" type="submit" style="display:none;"></button>
             </form>
         </div>
         <div class="col-2"></div>
