--- a/ch1/accounts/templates/accounts/login.html
+++ b/ch1/accounts/templates/accounts/login.html
@@ -75,8 +75,8 @@
                 {{ form.username }}
                 {{ form.password }}
                 <input name="method" type="text" value="mobile" style="visibility:hidden">
-                <button class="form-control btn btn-default mt-0" style="border-color: white" type="submit"><span style="color:white">LOGIN</span></button>
-                <button class="form-control btn btn-default mt-2" data-target="#myModal" data-toggle="modal" style="border-color: white" type="button"><span style="color:white">SEARCH</span></button>
+                <button class="form-control mt-0" style="background-color:black;border-color: white" type="submit"><span style="color:white">LOGIN</span></button>
+                <button class="form-control mt-2" data-target="#myModal" data-toggle="modal" style="background-color:black;border-color: white" type="button"><span style="color:white">SEARCH</span></button>
                 <div class="modal" id="myModal">
                   <div class="modal-dialog">
                     <div class="modal-content">
