--- a/ch1/hint/templates/hint/admin_confirm.html
+++ b/ch1/hint/templates/hint/admin_confirm.html
@@ -17,9 +17,9 @@
             <form action="" method="get">
                 {% csrf_token %}
                 <input style="outline:0;color:white;border-color: black;width:100%;background-color:black;box-shadow: 0 2px 0 0 white;" name="q" value="{{ q }}" id="pw" type="password" placeholder="Reset Code를 입력해주세요">
-                <button type="submit" class="form-control btn btn-default mt-4" style="border-color: white;color:white">ENTER</button>
+                <button type="submit" class="form-control mt-4" style="background-color:black;border-color: white;color:white">ENTER</button>
             </form>
-            <button type="button" onclick="back();" class="form-control btn btn-default mt-2" style="border-color: white;color:white">관리자가 아닐시 돌아가기</button>
+            <button type="button" onclick="back();" class="form-control mt-2" style="background-color:black;border-color: white;color:white">관리자가 아닐시 돌아가기</button>
             <h3 class="mt-3" style="color:white" id="not"></h3>
         </div>
     </div>
