--- a/ch1/hint/templates/hint/theme_hint.html
+++ b/ch1/hint/templates/hint/theme_hint.html
@@ -206,7 +206,7 @@
         {% endif %}
     {% endif %}
     <div class="text-center">
-        <button type="button" style="border-color:white;color:white;width:60%" class="my-4 form-control btn btn-default" onclick="back();">다른 힌트 사용하러가기</button>
+        <button type="button" style="background-color:black;border-color:white;color:white;width:60%" class="my-4 form-control" onclick="back();">다른 힌트 사용하러가기</button>
     </div>
 </div>
 
