--- a/ch1/hint/templates/hint/theme_hint.html
+++ b/ch1/hint/templates/hint/theme_hint.html
@@ -205,8 +205,12 @@
             {% endif %}
         {% endif %}
     {% endif %}
-    <div class="text-center">
-        <button type="button" style="background-color:black;border-color:white;color:white;width:60%" class="my-4 form-control" onclick="back();">다른 힌트 사용하러가기</button>
+    <div class="row text-center">
+        <div class="col-2"></div>
+        <div class="col-8">
+        <button type="button" style="background-color:black;border-color:white;color:white;" class="my-4 form-control" onclick="back();">다른 힌트 사용하러가기</button>
+        </div>
+        <div class="col-2"></div>
     </div>
 </div>
 
