--- a/ch1/hint/templates/hint/theme_hint.html
+++ b/ch1/hint/templates/hint/theme_hint.html
@@ -12,7 +12,13 @@
                 <audio controls autoplay src="{{ theme.hint1.url }}"></audio>
                 <audio controls autoplay src="{{ theme.sub_hint1.url }}"></audio>
             {% else %}
-                <audio controls autoplay src="{{ theme.hint1.url }}"></audio>
+                <audio id="audio1" controls autoplay src="{{ theme.hint1.url }}"></audio>
+                <script>
+                    var audio1 = document.getElementById("audio1");
+                    window.onload = function(){
+                        audio1.play();
+                    }
+                </script>
             {% endif %}
         {% endif %}
     {% endif %}
