--- a/ch1/hint/templates/hint/theme_list.html
+++ b/ch1/hint/templates/hint/theme_list.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
+
 <style>
     body {
         background-color: black;
@@ -7,6 +8,7 @@
     }
 
 </style>
+{% if nation == "Korea" %}
 <div class="container mt-5">
     <div class="text-center mt-5">
         <h4 class="mt-5">{{ escape_room }}</h4>
@@ -20,6 +22,7 @@
         </div>
     </div>
 </div>
-
+{% else %}
+{% endif %}
 
 {% endblock %}
