--- a/ch1/hint/templates/hint/not_hint.html
+++ b/ch1/hint/templates/hint/not_hint.html
@@ -25,12 +25,12 @@
       <!-- Modal body -->
       <div class="modal-body" style="color:black;">
         <p><strong>힌트폰 사용방법</strong><br>
-            1. QR코드 버튼을 클릭합니다.<br>
+            1. 힌트 사용 버튼을 클릭합니다.<br>
             2. 힌트가 필요한 문제의 QR코드를<br>
               카메라 프레임에 맞게 스캔합니다.<br>
-            3. 스캔 완료 후에 힌트사용 버튼을 클릭합니다.<br>
+            3. 스캔 완료 후 1초뒤에 힌트를 들으실 수 있습니다.<br>
               <br>
-          <strong>힌트폰 사용안내</strong><br>
+              <strong>힌트폰 사용안내</strong><br>
             1. 최대 {{ hintCount }}회까지만 사용이 가능합니다.<br>
             2. 한번 사용한 힌트는 카운팅 없이 연속 재생이 가능합니다.<br>
           </p>
