--- a/ch1/hint/templates/hint/theme_hint.html
+++ b/ch1/hint/templates/hint/theme_hint.html
@@ -13,7 +13,13 @@
                 <audio controls autoplay src="{{ theme.hint1.url }}"></audio>
                 <audio controls autoplay src="{{ theme.sub_hint1.url }}"></audio>
             {% else %}
-                <iframe src="{{ theme.hint1.url }}" allow="autoplay"></iframe>
+                <audio id="audio1" controls autoplay src="{{ theme.hint1.url }}"></audio>
+                <script>
+                    window.onload = function() {
+                        var audio1 = document.getElementById("audio1");
+                        audio1.play();
+                    }
+                </script>
             {% endif %}
         {% endif %}
     {% endif %}
