--- a/ch1/hint/templates/hint/theme_edit.html
+++ b/ch1/hint/templates/hint/theme_edit.html
@@ -41,15 +41,15 @@
             <div class="col-1"></div>
             <div class="col-10">
                 <div class="row">
-                    <div class="col-2 p-0 text-center">
-                        <h4 class="py-1 m-0">테마명 :</h4>
+                    <div class="col-2 py-1 text-center">
+                        <h4 class="mt-0 mb-2">테마명 :</h4>
                     </div>
                     <div class="col-3 p-0">
                         {{ form.name }}
                     </div>
                     <div class="col-1"></div>
-                    <div class="col-2 p-0 text-center">
-                        <h4 class="py-1 m-0">힌트 허용 개수 :</h4>
+                    <div class="col-2 py-1 text-center">
+                        <h4 class="mt-0 mb-2">힌트 허용 개수 :</h4>
                     </div>
                     <div class="col-3 p-0">
                         {{ form.hintCount }}
