--- a/ch1/hint/templates/hint/theme_edit.html
+++ b/ch1/hint/templates/hint/theme_edit.html
@@ -759,6 +759,13 @@
     </form>
 </div>
 <script>
+    function checkSize(input) {
+        if (input.files && input.files[0].size > (10 * 1024 * 1024)) {
+            alert("파일 사이즈가 10mb 이상은 업로드가 불가합니다.");
+            input.value = null;
+        }
+    }
+
     function plus_sub1(){
         var sub1_div = document.getElementById("sub1_div");
         sub1_div.setAttribute('style', '');
