--- a/ch1/hint/templates/hint/theme_hint.html
+++ b/ch1/hint/templates/hint/theme_hint.html
@@ -15,6 +15,8 @@
             {% else %}
                 <audio id="audio1" controls autoplay src="{{ theme.hint1.url }}"></audio>
                 <script>
+                    var audio1 = document.getElementById("audio1");
+                    audio1.volume = 1.0;
                     window.onload = function() {
                         var audio1 = document.getElementById("audio1");
                         audio1.play();
