--- a/ch1/mysite/templates/base.html
+++ b/ch1/mysite/templates/base.html
@@ -18,6 +18,9 @@
         body{
             background-color:black;
         }
+        *:focus {
+            outline:none;
+        }
     </style>
     <body>
         {% block content %}
