--- a/ch1/mysite/templates/base.html
+++ b/ch1/mysite/templates/base.html
@@ -21,6 +21,7 @@
         *:focus {
             outline:none;
         }
+        * {-webkit-tap-highlight-color:rgba(0,0,0,0);}
     </style>
     <body>
         {% block content %}
