--- a/ch1/hint/templates/hint/qr.html
+++ b/ch1/hint/templates/hint/qr.html
@@ -7,6 +7,10 @@
         font-size:14pt;
         color: white;
     }
+    *:focus {
+        outline:none !important;
+    }
+    * {-webkit-tap-highlight-color:rgba(0,0,0,0) !important;}
 </style>
 <div style="height:50px"></div>
 <div class="container text-center my-4 p-3">
