--- a/ch1/mysite/templates/base.html
+++ b/ch1/mysite/templates/base.html
@@ -19,7 +19,7 @@
             background-color:black;
         }
         *:focus {
-            outline:none;
+            outline:none !important;
         }
         * {-webkit-tap-highlight-color:rgba(0,0,0,0);}
     </style>
