--- a/ch1/hint/templates/hint/admin.html
+++ b/ch1/hint/templates/hint/admin.html
@@ -2,27 +2,32 @@
 {% block content %}
 {% load static %}
 
-<div class="container mt-3">
-    <div class="text-center mt-3" style="color:white">
-        <div class="row">
-            <div class="col-3"></div>
-            <div class="col-6">
-                <h2 class="mt-5">{{ escape_room }}</h2>
-                <h1 class="mt-1 mb-5">테마 수정</h1>
-            </div>
-            <div class="col-3 text-center">
-                <h4>QR 코드 생성하기</h4>
-                <a href="{% url 'hint:create_qr_code' %}"><img width="100px" src="{% static 'qr1.png' %}"></a>
+<div class="container-fluid mt-3">
+    <div class="row">
+        <div class="col-2"></div>
+        <div class="col-8">
+            <div class="text-center mt-3" style="color:white">
+                <div class="row">
+                    <div class="col-3"></div>
+                    <div class="col-6">
+                        <h2 class="mt-5">{{ escape_room }}</h2>
+                        <h1 class="mt-1 mb-5">테마 수정</h1>
+                    </div>
+                    <div class="col-3 text-center">
+                    </div>
+                </div>
+                <div class="row">
+                    {% for i in themes %}
+                    <div class="col-6 mt-5">
+                        <a style="text-decoration:none;color:white" href="{% url 'hint:theme_edit' user_id i.name %}"><h1 class="mt-5 mb-0">{{ i.name }}</h1><span>수정</span></a>
+                    </div>
+                    {% endfor %}
+                </div>
             </div>
         </div>
-        <div class="row">
-            {% for i in themes %}
-            <div class="col-6 mt-5">
-                <a style="text-decoration:none;color:white" href="{% url 'hint:theme_edit' user_id i.name %}"><h1 class="mt-5 mb-0">{{ i.name }}</h1><span>수정</span></a>
-            </div>
-            {% endfor %}
-        </div>
+        <div class="col-2"><a style="text-decoration:none" href="{% url 'hint:create' user_id %}"><h4 style="color:white">QR 코드 생성하기</h4></a></div>
     </div>
+
 </div>
 
 {% endblock %}
