--- a/ch1/hint/templates/hint/qr.html
+++ b/ch1/hint/templates/hint/qr.html
@@ -12,8 +12,16 @@
     }
     * {-webkit-tap-highlight-color:rgba(0,0,0,0) !important;}
 </style>
-<div style="height:50px"></div>
 <div class="container text-center my-4 p-3">
+    <div class="mb-2">
+        {% if interPhone %}
+        <button class="text-center" style="background-color:black;border-color:black" type="button" onclick="call();">
+            <img width="35px" src="{% static 'call.jpeg' %}">
+        </button>
+        {% else %}
+        <div style="height:30px"></div>
+        {% endif %}
+    </div>
     <span>{{ escape_room }}</span>
     <h2 class="mb-4">{{ theme }}</h2>
     <img src="{% static 'qr.png' %}">
@@ -22,9 +30,9 @@
         <div class="col-8">
             <form action="" method="get">
                 {% csrf_token %}
-                <button style="background-color:black;border-color:white; color:white" class="mt-3 form-control" onclick="android()" type="button">힌트 사용</button>
+                <button style="background-color:black;border-color:white;color:white" class="mt-3 form-control" onclick="android()" type="button">힌트 사용</button>
                 <h3 class="mt-4 mb-2">HINT COUNT</h3>
-                <h4 class="m-0">{{ count }}</h4>
+                <h4 class="m-0">{{ count }} / {{ hintCount }}</h4>
                 <input style="color:black;visibility:hidden" id="input" name="q" value="{{ q }}" type="text">
                 <button id="hint_btn" type="submit" style="display:none;"></button>
             </form>
@@ -72,6 +80,13 @@
 
 <script src="https://dmla.github.io/jsqrcode/src/qr_packed.js"></script>
 <script>
+    function call(){
+        var id = "{{ interPhone_id }}";
+        var secret = "{{ interPhone_secret }}";
+        var key = "{{ interPhone_key }}";
+        var admin = "{{ interPhone_call }}";
+        window.Android.call(key, secret, id, admin);
+    }
     function android(){
         window.Android.capture();
     }
@@ -88,18 +103,6 @@
         }
     }
 
-    //("#input").change(function(){
-    //    var url = document.getElementById("input").value;
-    //    if (url == ""){
-    //        swal({title:"QR코드를 스캔하세요.",
-    //            button:false,
-    //        });
-    //    }else {
-    //        location.href=url;
-    //    }
-    //});
-
-
     function hintUse(){
         url = document.getElementById("input").value;
         if (url == ""){
@@ -114,6 +117,8 @@
         window.onpopstate = function () {
             history.go(1);
     };
+
+
 </script>
 
 
