--- a/ch1/hint/templates/hint/qr.html
+++ b/ch1/hint/templates/hint/qr.html
@@ -11,6 +11,7 @@
         outline:none !important;
     }
     * {-webkit-tap-highlight-color:rgba(0,0,0,0) !important;}
+
 </style>
 <div class="container text-center my-4 p-3">
     <div class="mb-2">
@@ -30,7 +31,7 @@
         <div class="col-8">
             <form action="" method="get">
                 {% csrf_token %}
-                <button style="background-color:black;border-color:white;color:white" class="mt-3 form-control" onclick="android()" type="button">힌트 사용</button>
+                <button style="background-color:black;border-color:white;color:white" class="mt-3 form-control" onclick="android()" type="button">QR 코드 힌트 사용</button>
                 <h3 class="mt-4 mb-2">HINT COUNT</h3>
                 <h4 class="m-0">{{ count }} / {{ hintCount }}</h4>
                 <input style="color:black;visibility:hidden" id="input" name="q" value="{{ q }}" type="text">
